🎨 chore: add branding to Plesk Deployer action
Updated the action description to clarify deployment capabilities. Added branding with icon 'arrow-up-circle' and color 'gray-dark' for better visibility in the GitHub Actions marketplace. 🛠️

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: "Plesk Deployer"
-description: "Deploy applications to Plesk via SCP"
+description: "Deploy applications and resources to a Plesk server via SCP"
+branding:
+  icon: arrow-up-circle
+  color: gray-dark
 inputs:
   ssh-private-key:
     description: "SSH private key for authentication"
