chore: update default remote directory in documentation and action files ✨

--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
   remote-dir:
     description: "Remote directory to copy files to"
     required: false
-    default: "/httpdocs"
+    default: "/"
   node-version:
     description: "Node version running your project in plesk"
     required: false
